--- a/gettext-tools/po/ChangeLog
+++ b/gettext-tools/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-10-28  Bruno Haible  <bruno@clisp.org>
+
+	* ca.po: Update from Ivan Vilata i Balaguer <ivan@selidor.net>.
+
 2007-10-27  Bruno Haible  <bruno@clisp.org>
 
 	* fr.po: Update from Christophe Combelles <ccomb@free.fr>.
