--- a/gettext-tools/doc/ChangeLog
+++ b/gettext-tools/doc/ChangeLog
@@ -1,5 +1,12 @@
 2007-10-28  Bruno Haible  <bruno@clisp.org>
 
+	* gettext.texi: Talk about configure.ac instead of configure.in.
+	(configure.ac): Renamed from configure.in.
+	(Autoconf macros for use in configure.ac): Renamed from "Autoconf
+	macros for use in configure.in".
+
+2007-10-28  Bruno Haible  <bruno@clisp.org>
+
 	* gettext.texi (The --style option): Document the predefined styles.
 	(Style rules): Mark .added, .changed, .removed as not yet implemented.
 
