--- a/gettext-tools/doc/gettextize.texi
+++ b/gettext-tools/doc/gettextize.texi
@@ -54,7 +54,7 @@ Force replacement of files which already exist.
 Install the libintl sources in a subdirectory named @file{intl/}.
 This libintl will be used to provide internationalization on systems
 that don't have GNU libintl installed.  If this option is omitted,
-the call to @code{AM_GNU_GETTEXT} in @file{configure.in} should read:
+the call to @code{AM_GNU_GETTEXT} in @file{configure.ac} should read:
 @samp{AM_GNU_GETTEXT([external])}, and internationalization will not
 be enabled on systems lacking GNU gettext.
 
@@ -157,8 +157,8 @@ should use @samp{-h} option with @code{tar} within your @code{dist}
 goal of your main @file{Makefile.in}.
 
 Furthermore, @code{gettextize} will update all @file{Makefile.am} files
-in each affected directory, as well as the top level @file{configure.in}
-or @file{configure.ac} file.
+in each affected directory, as well as the top level @file{configure.ac}
+or @file{configure.in} file.
 
 It is interesting to understand that most new files for supporting
 GNU @code{gettext} facilities in one package go in @file{intl/},
@@ -184,7 +184,7 @@ read the section @ref{Adjusting Files} after invoking @code{gettextize}.
 In particular, if after using @samp{gettexize}, you get an error
 @samp{AC_COMPILE_IFELSE was called before AC_GNU_SOURCE} or
 @samp{AC_RUN_IFELSE was called before AC_GNU_SOURCE}, you can fix it
-by modifying @file{configure.ac}, as described in @ref{configure.in}.
+by modifying @file{configure.ac}, as described in @ref{configure.ac}.
 
 It is also important to understand that @code{gettextize} is not part
 of the GNU build system, in the sense that it should not be invoked
