--- a/gettext-runtime/po/ChangeLog
+++ b/gettext-runtime/po/ChangeLog
@@ -1,5 +1,10 @@
 2007-10-28  Bruno Haible  <bruno@clisp.org>
 
+	* Makefile.in.in ($(DOMAIN).pot-update): Consider the
+	XGETTEXT_EXTRA_OPTIONS variable.
+
+2007-10-28  Bruno Haible  <bruno@clisp.org>
+
 	* Makefile.in.in (GETTEXT_MACRO_VERSION): Bump to 0.17.
 
 2007-10-28  Bruno Haible  <bruno@clisp.org>
