--- a/gettext-tools/po/ChangeLog
+++ b/gettext-tools/po/ChangeLog
@@ -1,5 +1,10 @@
 2007-10-30  Bruno Haible  <bruno@clisp.org>
 
+	* nb.po: Renamed from no.po.
+	* LINGUAS: Add nb, remove no.
+
+2007-10-30  Bruno Haible  <bruno@clisp.org>
+
 	* it.po: Update from Marco Colombo <m.colombo@ed.ac.uk>.
 
 2007-10-28  Bruno Haible  <bruno@clisp.org>
