--- a/gettext-tools/doc/ChangeLog
+++ b/gettext-tools/doc/ChangeLog
@@ -1,3 +1,7 @@
+2007-10-31  Bruno Haible  <bruno@clisp.org>
+
+	* gettext.texi (aclocal): Remove ulonglong.m4 from the file list.
+
 2007-10-28  Bruno Haible  <bruno@clisp.org>
 
 	* gettext.texi (AM_XGETTEXT_OPTION): New section.
