--- a/gettext-tools/examples/ChangeLog
+++ b/gettext-tools/examples/ChangeLog
@@ -1,3 +1,8 @@
+2007-10-31  Bruno Haible  <bruno@clisp.org>
+
+	* hello-*/m4/Makefile.am (EXTRA_DIST): Remove ulonglong.m4.
+	* hello-*/autoclean.sh: Don't remove ulonglong.m4 any more.
+
 2007-10-28  Bruno Haible  <bruno@clisp.org>
 
 	* hello-*/po/Makefile.am ($(DOMAIN).pot-update): Consider the
