--- a/gettext-tools/styles/ChangeLog
+++ b/gettext-tools/styles/ChangeLog
@@ -1,3 +1,7 @@
+2007-10-31  Bruno Haible  <bruno@clisp.org>
+
+	* Makefile.am (EXTRA_DIST): New variable.
+
 2007-10-28  Bruno Haible  <bruno@clisp.org>
 
 	* po-default.css: Completely redesigned.
