--- a/gettext-tools/libgettextpo/ChangeLog
+++ b/gettext-tools/libgettextpo/ChangeLog
@@ -1,3 +1,8 @@
+2007-11-01  Bruno Haible  <bruno@clisp.org>
+
+	* gettext-po.h.in (LIBGETTEXTPO_VERSION): Bump version number.
+	* Makefile.am (LTV_CURRENT, LTV_REVISION, LTV_AGE): Bump to 4:0:4.
+
 2007-10-21  Bruno Haible  <bruno@clisp.org>
 
 	* gettext-po.h.in (LIBGETTEXTPO_VERSION): Bump version number.
