--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-01  Bruno Haible  <bruno@clisp.org>
+
+	* version.sh: Bump version number to 0.17.
+
 2007-10-31  Bruno Haible  <bruno@clisp.org>
 
 	* Makefile.am (distcheck-hook): Exclude copyright header when comparing
