--- a/gettext-runtime/libasprintf/ChangeLog
+++ b/gettext-runtime/libasprintf/ChangeLog
@@ -1,3 +1,11 @@
+2007-11-03  Bruno Haible  <bruno@clisp.org>
+
+	Fix out-of-memory handling of vasnprintf.
+	* printf-parse.c: Include <errno.h>.
+	(PRINTF_PARSE): When failing, set errno to EINVAL or ENOMEM.
+	* vasnprintf.c (VASNPRINTF): When PRINTF_PARSE fails, assume errno is
+	already set.
+
 2007-10-21  Bruno Haible  <bruno@clisp.org>
 
 	* printf-parse.c: Don't assume <stdint.h> exists in IN_LIBASPRINTF
