--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,5 +1,16 @@
 2007-11-03  Bruno Haible  <bruno@clisp.org>
 
+	* vasnprintf.c: Implement NEED_PRINTF_DOUBLE.
+	(decode_double): New function, copied from decode_long_double.
+	(scale10_round_decimal_decoded): New function, extracted from
+	scale10_round_decimal_long_double.
+	(scale10_round_decimal_long_double): Use it.
+	(scale10_round_decimal_double): New function.
+	(floorlog10): New function.
+	(VASNPRINTF): Handle NEED_PRINTF_DOUBLE case.
+
+2007-11-03  Bruno Haible  <bruno@clisp.org>
+
 	* vasnprintf.c (VASNPRINTF): Don't assume that snprintf's return value
 	is C99 compliant.
 	Needed for OSF/1 5.1.
