--- a/gettext-runtime/libasprintf/ChangeLog
+++ b/gettext-runtime/libasprintf/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-04  Bruno Haible  <bruno@clisp.org>
+
+	* vasnprintf.c (scale10_round_decimal_decoded): Fix shift loop.
+
 2007-11-03  Bruno Haible  <bruno@clisp.org>
 
 	* vasnprintf.c: Implement NEED_PRINTF_DOUBLE.
