Update from gnulib.

--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,5 +1,9 @@
 2007-11-04  Bruno Haible  <bruno@clisp.org>
 
+	* vasnprintf.c (VASNPRINTF): Handle NEED_PRINTF_UNBOUNDED_PRECISION.
+
+2007-11-04  Bruno Haible  <bruno@clisp.org>
+
 	* vasnprintf.c (scale10_round_decimal_decoded): Fix shift loop.
 
 2007-11-03  Bruno Haible  <bruno@clisp.org>
