Update from gnulib: Protect all macro definitions containing an 'if' statement.

--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,5 +1,10 @@
 2007-11-04  Bruno Haible  <bruno@clisp.org>
 
+	* lock.h: Protect all macro definitions containing an 'if' statement
+	through a "do { ... } while (0)".
+
+2007-11-04  Bruno Haible  <bruno@clisp.org>
+
 	* vasnprintf.c (DCHAR_IS_TCHAR, DCHAR_CPY): Undefine at the end.
 
 2007-06-11  Bruno Haible  <bruno@clisp.org>
