--- a/autoconf-lib-link/ChangeLog
+++ b/autoconf-lib-link/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-07  Bruno Haible  <bruno@clisp.org>
+
+	* gettext-0.17 released.
+
 2007-06-27  Bruno Haible  <bruno@clisp.org>
 
 	* config.rpath: Upgrade to libtool-1.5.24.
