--- a/gettext-runtime/src/ChangeLog
+++ b/gettext-runtime/src/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-07  Bruno Haible  <bruno@clisp.org>
+
+	* gettext-0.17 released.
+
 2007-10-07  Bruno Haible  <bruno@clisp.org>
 
 	* envsubst.c (main): In the --version output, say GPLv3+.
