--- a/gettext-tools/examples/ChangeLog
+++ b/gettext-tools/examples/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-07  Bruno Haible  <bruno@clisp.org>
+
+	* gettext-0.17 released.
+
 2007-10-31  Bruno Haible  <bruno@clisp.org>
 
 	* hello-*/m4/Makefile.am (EXTRA_DIST): Remove ulonglong.m4.
