--- a/gettext-tools/libgrep/ChangeLog
+++ b/gettext-tools/libgrep/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-07  Bruno Haible  <bruno@clisp.org>
+
+	* gettext-0.17 released.
+
 2007-01-26  Bruno Haible  <bruno@clisp.org>
 
 	* Makefile.am (LIBADD_SOURCE): Remove strdup.h.
