--- a/gettext-tools/man/ChangeLog
+++ b/gettext-tools/man/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-07  Bruno Haible  <bruno@clisp.org>
+
+	* gettext-0.17 released.
+
 2007-10-27  Bruno Haible  <bruno@clisp.org>
 
 	* recode-sr-latin.x: New file.
