--- a/gettext-tools/misc/ChangeLog
+++ b/gettext-tools/misc/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-07  Bruno Haible  <bruno@clisp.org>
+
+	* gettext-0.17 released.
+
 2007-10-31  Bruno Haible  <bruno@clisp.org>
 
 	* gettextize.in (m4filelist): Remove ulonglong.m4 from the list.
