--- a/gettext-tools/projects/ChangeLog
+++ b/gettext-tools/projects/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-07  Bruno Haible  <bruno@clisp.org>
+
+	* gettext-0.17 released.
+
 2007-06-28  Bruno Haible  <bruno@clisp.org>
 
 	Update after the TP site has moved.
