--- a/gnulib-local/ChangeLog
+++ b/gnulib-local/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-07  Bruno Haible  <bruno@clisp.org>
+
+	* gettext-0.17 released.
+
 2007-10-27  Bruno Haible  <bruno@clisp.org>
 
 	* modules/libcroco (Makefile.am): When using the preinstalled libcroco,
