--- a/gettext-runtime/po/ChangeLog
+++ b/gettext-runtime/po/ChangeLog
@@ -1,5 +1,10 @@
 2007-11-07  Bruno Haible  <bruno@clisp.org>
 
+	* zh_CN.po: Restore the accidentally emptied translations.
+	Reported by Benno Schulenberg <coordinator@translationproject.org>.
+
+2007-11-07  Bruno Haible  <bruno@clisp.org>
+
 	* gettext-0.17 released.
 
 2007-10-30  Bruno Haible  <bruno@clisp.org>
