--- a/gettext-runtime/libasprintf/ChangeLog
+++ b/gettext-runtime/libasprintf/ChangeLog
@@ -1,5 +1,11 @@
 2007-11-10  Bruno Haible  <bruno@clisp.org>
 
+	* configure.ac: Invoke AC_TYPE_LONG_LONG_INT instead of
+	gl_AC_TYPE_LONG_LONG. Don't invoke gt_TYPE_LONGDOUBLE.
+	Report and patch by Kacper.
+
+2007-11-10  Bruno Haible  <bruno@clisp.org>
+
 	* configure.ac: Invoke gl_EOVERFLOW.
 
 2007-11-09  Bruno Haible  <bruno@clisp.org>
