--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,3 +1,8 @@
+2007-11-14  Bruno Haible  <bruno@clisp.org>
+
+	* config.charset: Update for OpenBSD 4.1.
+	Reported and helped by Ben Pfaff <blp@cs.stanford.edu>.
+
 2007-11-09  Bruno Haible  <bruno@clisp.org>
 
 	* vasnprintf.c (VASNPRINTF): Ensure that we never call snprintf with a
