--- a/gettext-tools/ChangeLog
+++ b/gettext-tools/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-15  Bruno Haible  <bruno@clisp.org>
+
+	* configure.ac: Check for getrlimit and setrlimit.
+
 2007-11-07  Bruno Haible  <bruno@clisp.org>
 
 	* gettext-0.17 released.
