--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,3 +1,9 @@
+2007-11-15  Bruno Haible  <bruno@clisp.org>
+
+	* gettext-8-prg.c: New file.
+	* Makefile.am (TESTS, noinst_PROGRAMS): Add gettext-8.
+	(gettext_8_*): New variables.
+
 2007-11-07  Bruno Haible  <bruno@clisp.org>
 
 	* gettext-0.17 released.
