--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,3 +1,10 @@
+2007-11-26  Bruno Haible  <bruno@clisp.org>
+
+	* vasnprintf.c (decode_long_double): Don't abort if the 'long double'
+	type has excess precision.
+	Reported by Jim Meyering in
+	<http://lists.gnu.org/archive/html/bug-gnulib/2007-11/msg00120.html>.
+
 2007-11-15  Bruno Haible  <bruno@clisp.org>
 
 	Avoid crash by stack overflow when msgid is very long.
