--- a/gettext-runtime/libasprintf/ChangeLog
+++ b/gettext-runtime/libasprintf/ChangeLog
@@ -1,3 +1,10 @@
+2007-11-26  Bruno Haible  <bruno@clisp.org>
+
+	* vasnprintf.c (decode_long_double): Don't abort if the 'long double'
+	type has excess precision.
+	Reported by Jim Meyering in
+	<http://lists.gnu.org/archive/html/bug-gnulib/2007-11/msg00120.html>.
+
 2007-11-10  Bruno Haible  <bruno@clisp.org>
 
 	* configure.ac: Do _snprintf check like gnulib's vasnprintf.m4 does.
