--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,3 +1,12 @@
+2007-11-30  Bruno Haible  <bruno@clisp.org>
+
+	* lock.h (gl_recursive_lock_init) [PTHREAD &&
+	PTHREAD_RECURSIVE_MUTEX_INITIALIZER]: Call
+	glthread_recursive_lock_init.
+	* lock.c (glthread_recursive_lock_init)
+	[PTHREAD_RECURSIVE_MUTEX_INITIALIZER]: New function.
+	Reported by Yoann Vandoorselaere <yoann.v@prelude-ids.com>.
+
 2007-11-28  Bruno Haible  <bruno@clisp.org>
 
 	* libgnuintl.h.in (fprintf, vfprintf, printf, vprintf, sprintf,
