--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,3 +1,8 @@
+2007-12-22  Bruno Haible  <bruno@clisp.org>
+
+	* msgcat-17: New file.
+	* Makefile.am (TESTS): Add it.
+
 2007-11-15  Bruno Haible  <bruno@clisp.org>
 
 	* gettext-8-prg.c: New file.
