--- a/gettext-tools/po/ChangeLog
+++ b/gettext-tools/po/ChangeLog
@@ -1,3 +1,10 @@
+2007-12-24  Bruno Haible  <bruno@clisp.org>
+
+	* Makefile.in.in (.nop.po-update): Put all non-option arguments after
+	all option arguments, so that the commands work 1. when POSIXLY_CORRECT
+	is set, 2. on platforms whose getopt facility is POSIX compliant but
+	not GNU libc compatible, such as Cygwin.
+
 2007-11-07  Bruno Haible  <bruno@clisp.org>
 
 	* gettext-0.17 released.
