--- a/gettext-tools/doc/ChangeLog
+++ b/gettext-tools/doc/ChangeLog
@@ -1,3 +1,10 @@
+2007-12-24  Bruno Haible  <bruno@clisp.org>
+
+	* gettext.texi (Header Entry): Document the 'Language' field.
+	* msgcat.texi: Document the --lang option.
+	* msgen.texi: Likewise.
+	* msgmerge.texi: Likewise.
+
 2007-12-02  Bruno Haible  <bruno@clisp.org>
 
 	* gettext.texi (Plural Forms): Put Turkish under nplurals=2.
