--- a/gettext-tools/examples/ChangeLog
+++ b/gettext-tools/examples/ChangeLog
@@ -1,5 +1,12 @@
 2007-12-24  Bruno Haible  <bruno@clisp.org>
 
+	* hello-*/po/Makefile.am ($(POFILES), .nop.po-update): When using
+	msgmerge 0.18 or newer, pass a --lang option.
+	* hello-objc-gnustep/po/GNUmakefile ($(POFILES), .nop.po-update):
+	Likewise.
+
+2007-12-24  Bruno Haible  <bruno@clisp.org>
+
 	* hello-*/po/Makefile.am (.nop.po-update): Put all non-option arguments
 	after all option arguments, so that the commands work 1. when
 	POSIXLY_CORRECT is set, 2. on platforms whose getopt facility is POSIX
