--- a/AUTHORS
+++ b/AUTHORS
@@ -16,3 +16,6 @@ GETTEXT		Karl Eichwalder
 Assigns past and future changes.
 GETTEXT		SuSE Linux AG			2002-07-03
 Disclaimer for Karl Eichwalder, in the past and for the next 5 years.
+
+GETTEXT		Michele Cicciotti alias KJK::Hyperion
+Assigns past and future changes.
