--- a/gettext-runtime/po/pt.po
+++ b/gettext-runtime/po/pt.po
@@ -5,12 +5,13 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gettext-runtime 0.15-pre5\n"
+"Project-Id-Version: gettext-runtime 0.16.2-pre5\n"
 "Report-Msgid-Bugs-To: bug-gnu-gettext@gnu.org\n"
-"POT-Creation-Date: 2007-11-02 03:22+0100\n"
-"PO-Revision-Date: 2007-05-18 01:13+0100\n"
+"POT-Creation-Date: 2007-12-24 15:36+0100\n"
+"PO-Revision-Date: 2007-12-09 18:24+0100\n"
 "Last-Translator: Helder Correia <helder.pereira.correia@gmail.com>\n"
 "Language-Team: Portuguese <translation-team-pt@lists.sourceforge.net>\n"
+"Language: pt\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -93,6 +94,10 @@ msgid ""
 "This is free software: you are free to change and redistribute it.\n"
 "There is NO WARRANTY, to the extent permitted by law.\n"
 msgstr ""
+"Copyright (C) %s Free Software Foundation, Inc.\n"
+"Licança GPLv3+: GNU GPL versão 3 ou posterior <http://gnu.org/licenses/gpl.html>\n"
+"Este software é livre: pode alterá-lo e redistribuí-lo.\n"
+"NÃO HÁ QUALQUER GARANTIA, até onde a lei o permite.\n"
 
 #: src/envsubst.c:118 src/gettext.c:139 src/ngettext.c:129
 #, c-format
@@ -312,16 +317,3 @@ msgstr ""
 "stdout. Em vez disso as mensagens encontradas no catálogo seleccionado\n"
 "são traduzidas.\n"
 "Pasta padrão de pesquisa: %s\n"
-
-#~ msgid ""
-#~ "Copyright (C) %s Free Software Foundation, Inc.\n"
-#~ "This is free software; see the source for copying conditions.  There is "
-#~ "NO\n"
-#~ "warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR "
-#~ "PURPOSE.\n"
-#~ msgstr ""
-#~ "Copyright (C) %s Free Software Foundation, Inc.\n"
-#~ "Este programa é livre; veja o código fonte para condições de cópia. NÃO "
-#~ "há qualquer\n"
-#~ "garantia; nem mesmo para COMERCIALIZAÇÃO ou UTILIDADE PARA UM PROPÓSITO "
-#~ "PARTICULAR.\n"
