--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-13  Bruno Haible  <bruno@clisp.org>
+
+	* Makefile.am (noinst_headers): Add msgl-header.h.
+
 2007-12-24  Bruno Haible  <bruno@clisp.org>
 
 	Introduce 'Language' header field.
