--- a/gettext-tools/misc/ChangeLog
+++ b/gettext-tools/misc/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-18  Bruno Haible  <bruno@clisp.org>
+
+	* autopoint.in: Fix line breaking in an error message.
+
 2007-12-02  Bruno Haible  <bruno@clisp.org>
 
 	* po-mode.el: Use modern backquote syntax.
