--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,9 @@
+2008-01-29  Bruno Haible  <bruno@clisp.org>
+
+	* write-po.c (wrap): Change the severity of the "should not contain
+	escape sequence" message from PO_SEVERITY_ERROR to PO_SEVERITY_WARNING.
+	Reported by Kerb <ykerb2@free.fr>.
+
 2008-01-13  Bruno Haible  <bruno@clisp.org>
 
 	* Makefile.am (noinst_headers): Add msgl-header.h.
