--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-20  Bruno Haible  <bruno@clisp.org>
+
+	* format-gcc-internal-1: Test also %K.
+
 2008-02-04  Bruno Haible  <bruno@clisp.org>
 
 	* msgmerge-23: New file.
