--- a/gettext-tools/doc/ChangeLog
+++ b/gettext-tools/doc/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-02  Benno Schulenberg <bensberg@justemail.net>
+
+	* gettext.texi (PO Files): Stylistic improvements.
+
 2008-01-12  Bruno Haible  <bruno@clisp.org>
 
 	* msgfilter.texi: Fix last example.
