--- a/autoconf-lib-link/m4/ChangeLog
+++ b/autoconf-lib-link/m4/ChangeLog
@@ -1,3 +1,9 @@
+2008-03-11  Bruno Haible  <bruno@clisp.org>
+
+	Avoid conflicts between local macro definitions.
+	* lib-link.m4 (AC_LIB_LINKFLAGS, AC_LIB_HAVE_LINKFLAGS,
+	AC_LIB_LINKFLAGS_BODY): Use pushdef/popdef instead of define/undefine.
+
 2007-11-07  Bruno Haible  <bruno@clisp.org>
 
 	* gettext-0.17 released.
