--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,3 +1,10 @@
+2008-04-17  Bruno Haible  <bruno@clisp.org>
+
+	* lock.h (gl_lock_destroy, gl_rwlock_destroy,
+	gl_recursive_lock_destroy): Provide no-op definitions for the dummy
+	implementation.
+	Patch by Bruce Merry <bmerry@gmail.com>.
+
 2008-04-16  Bruno Haible  <bruno@clisp.org>
 
 	* localename.c (LANG_MAORI, LANG_QUECHUA, LANG_SOTHO, LANG_UIGHUR): New
